<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/nav_my_study"
        android:name="com.example.pacemaker.study.ui.mystudy.MyStudyFragment"
        android:label="@string/title_my_study"
        tools:layout="@layout/fragment_main_home" >
        <action
            android:id="@+id/action_nav_my_study_to_nav_study_search"
            app:destination="@id/nav_study_search" />
        <action
            android:id="@+id/action_nav_my_study_to_nav_study_league"
            app:destination="@id/nav_study_league" />
        <action
            android:id="@+id/action_nav_my_study_to_nav_my_page"
            app:destination="@id/nav_my_page" />
    </fragment>

    <fragment
        android:id="@+id/nav_study_search"
        android:name="com.example.pacemaker.study.ui.studysearch.StudySearchFragment"
        android:label="@string/title_study_search"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_nav_study_search_to_nav_study_league"
            app:destination="@id/nav_study_league" />
        <action
            android:id="@+id/action_nav_study_search_to_nav_my_page"
            app:destination="@id/nav_my_page" />
        <action
            android:id="@+id/action_nav_study_search_to_nav_my_study"
            app:destination="@id/nav_my_study" />
    </fragment>

    <fragment
        android:id="@+id/nav_study_league"
        android:name="com.example.pacemaker.study.ui.studyleague.StudyLeagueFragment"
        android:label="@string/title_study_league"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_nav_study_league_to_nav_study_search"
            app:destination="@id/nav_study_search" />
        <action
            android:id="@+id/action_nav_study_league_to_nav_my_page"
            app:destination="@id/nav_my_page" />
        <action
            android:id="@+id/action_nav_study_league_to_nav_my_study"
            app:destination="@id/nav_my_study" />
    </fragment>
    <fragment
        android:id="@+id/nav_my_page"
        android:name="com.example.pacemaker.study.ui.mypage.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_notifications" >

        <action
            android:id="@+id/action_nav_my_page_to_nav_my_study2"
            app:destination="@id/nav_my_study" />
        <action
            android:id="@+id/action_nav_my_page_to_nav_study_league"
            app:destination="@id/nav_study_league" />
        <action
            android:id="@+id/action_nav_my_page_to_nav_study_search"
            app:destination="@id/nav_study_search" />
    </fragment>
</navigation>