<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:id="@+id/auth_title_login"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/auth_login"
        android:paddingStart="20dp"
        android:textSize="30sp"
        android:textColor="@color/mainTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/auth_title_login"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/auth_login_edittext_email"
            android:background="@drawable/editview_auth_input"
            android:hint="@string/auth_email"
            android:maxLength="20"
            android:textSize="15sp"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="7dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/auth_login_textview_error_email"
            android:paddingHorizontal="20dp"
            android:textSize="11sp"
            android:textColor="@color/error"
            android:visibility="gone" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/auth_login_edittext_pw"
            android:inputType="textPassword"
            android:background="@drawable/editview_auth_input"
            android:hint="@string/auth_pw"
            android:maxLength="20"
            android:textSize="15sp"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="7dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/auth_login_textview_error_pw"
            android:paddingHorizontal="20dp"
            android:textSize="11sp"
            android:textColor="@color/error"
            android:visibility="gone" />
        
        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:id="@+id/auth_button_signin"
            android:background="@drawable/button_filled_maintheme"
            android:textSize="15sp"
            android:text="@string/auth_signin"
            android:textColor="#ffffff" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>