<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="400dp"
        app:layout_constraintWidth_min="300dp"
        android:layout_marginHorizontal="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:id="@+id/auth_title_login"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/auth_change_pw"
            style="@style/AuthTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:id="@+id/layout1"
            app:layout_constraintTop_toBottomOf="@id/auth_title_login">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/auth_email"
                android:textColor="@color/loginHint"
                android:fontFamily="@font/nanum_gothic_extra_bold_font"
                android:textSize="@dimen/normal_text_size"
                android:paddingStart="20dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/auth_text_email"
                android:layout_gravity="end|center_vertical"
                android:text="aaaa@naver.com"
                android:textColor="@color/inputText"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edit_auth_new_password"
            app:layout_constraintTop_toBottomOf="@id/layout1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:hint="@string/auth_new_pw"
            android:inputType="text"
            style="@style/AuthLoginEditViewStyle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:id="@+id/auth_edit_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/edit_auth_new_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="number"
            android:hint="@string/auth_confirm_new_pw"
            style="@style/AuthLoginEditViewStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_login"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/auth_edit_confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ButtonFilled"
            android:text="@string/auth_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>