<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:id="@+id/auth_imageview_logo"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="300dp"
        android:src="@drawable/ssutudy_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_imageview_logo"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/auth_button_login"
            android:background="@drawable/button_filled_maintheme"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"
            android:text="@string/auth_login"
            android:textSize="15sp"/>


        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/auth_button_signup"
            android:background="@drawable/button_line_maintheme"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="15dp"
            android:textColor="@color/mainTheme"
            android:textSize="15sp"
            android:text="@string/auth_signup"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auth_button_missing"
            android:background="#ffffff"
            android:text="@string/auth_missing_info"
            android:textColor="#8E8E93"
            android:textSize="12sp" />




    </LinearLayout>











</androidx.constraintlayout.widget.ConstraintLayout>